#2 Update inventory and Vagrantfile files

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,12 +1,12 @@
 [vagrant]
-vagrant.mjlife.se
+vagrant-www.mkdevops.se
 
 [gcp]
-test.mjlife.se
+test-www.mkdevops.se
 
 [prod]
 hq.mkdevops.se
 
 [prod:vars]
-hostname=www.mjlife.se
-local_port=8090
+hostname=www.mkdevops.se
+local_port=8073
